# solana-case

./: .gitignore  Anchor.toml  DAPP_README.md  DEPLOYMENT_GUIDE.md  IMPROVEMENTS.md  LOCAL_WALLET_SETUP.md  MULTI_PROGRAM_GUIDE.md  PHANTOM_SETUP.md  QUICKSTART.md  QUICK_START.md  QUICK_USE_GUIDE.md  README.md  airdrop-helper.sh  desc.txt  export-wallet-for-phantom.sh  package.json
client/: CODE_EXPLAINED.md  COMPARISON.md  Cargo.toml  README.md
client-ts/: COMPARISON.md  README.md  index.ts
client-ts/examples/: basic.ts  batch.ts  error-handling.ts
client-ts/my-counter/: README.md  index.ts
client-ts/my-counter/examples/: README.md  basic.ts  batch.ts  error-handling.ts
client-ts/shared/: README.md  utils.ts
client-ts/simple-amm/: index.ts
client-ts/token-vault/: README.md  index.ts
client-ts/user-profile/: README.md  index.ts
client/src/: main.rs
dapp-frontend/: .env.example  README.md  index.html  package.json
dapp-frontend/public/: simple-connect.html  test-connection.html
dapp-frontend/src/: App.vue
dapp-frontend/src/api/: index.ts
dapp-frontend/src/components/: WalletConnector.vue
dapp-frontend/src/idl/: my_project.json  my_project.ts
dapp-frontend/src/router/: index.ts
dapp-frontend/src/services/: counterProgram.ts
dapp-frontend/src/stores/: wallet.ts
programs/token-vault/: Cargo.toml  README.md
programs/user-profile/: README.md
scripts/: get_discriminators.sh
server/: .env.example  README.md  package.json  test-connection.ts
server/src/: index.ts
tests/: my-project.ts  simple-amm.ts  token-vault.ts  user-profile.ts
(+18 files in other folders)
